--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,13 +22,14 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@types/node": "^20.8.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "eslint-config-prettier": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-plugin-import": "^2.28.1",
@@ -39,8 +40,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-standard": "^5.0.0",
+    "standard": "^17.1.0",
     "typescript": "^5.2.2",
-    "vite": "^4.4.5",
-    "standard": "^17.1.0"
+    "vite": "^4.4.5"
   }
 }
